# water-puppetry-staging-design-agent-skill

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT-TRACKING.md  LICENSE  Makefile  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  SECURITY.md  SKILL-STANDARD.md  SKILL.md  progression.json  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  release.yml
assets/: README.md
assets/diagrams/: harness-architecture.mmd  hooks-lifecycle.mmd  skill-registry-flow.mmd
assets/schemas/: advisor-conclusion.schema.json  core-analysis.schema.json  evidence-bundle.schema.json  final-report.schema.json  harness-input.schema.json  harness-output.schema.json  knowledge-evidence.schema.json  requirements.schema.json  tool-call.schema.json  tool-compute-dmx-address.schema.json  tool-electrical-safety-check.schema.json  tool-estimate-pool-volume.schema.json  tool-estimate-tokens.schema.json  tool-evidence-tier.schema.json  tool-knowledge-lookup.schema.json  tool-lighting-angle-check.schema.json  tool-risk-matrix.schema.json  tool-score-folktale-repertoire.schema.json  tool-validate-ip-rating.schema.json  tool-validate-report-schema.schema.json  tool-verdict-classifier.schema.json
config/: feature_flags.yaml  hooks.yaml  llm_params.yaml  skill_registry.yaml  sources.yaml  tools.yaml
references/: README.md  domain-glossary.md  folk-tale-repertoire.md  lighting-standards.md  safety-protocols.md  water-stage-engineering.md
references/prompt-templates/: main-harness.md  sub-advisor.md  sub-core-analysis.md  sub-evidence-collector.md  sub-gather-requirements.md  sub-knowledge-updater.md
scripts/: README.md  __init__.py  orchestrate.py  run_crawl.py  seed_knowledge_base.py  setup_env.py  validate_output.py
skills/: main.md  sub-advisor.md  sub-core-analysis.md  sub-evidence-collector.md  sub-gather-requirements.md  sub-knowledge-updater.md
tests/: TEST_RESULTS.md  __init__.py  test-scenarios.md
tools/: __init__.py  agent_runner.py  config.py  config_loader.py  context.py  exceptions.py  hooks.py  knowledge_updater.py  logger.py  router.py  run_test_scenarios.py  schema.py  skill_registry.py  state.py  test_agent_runner.py  test_config_loader.py  test_hooks.py  test_knowledge_updater.py  test_router.py  test_schema.py  test_skill_registry.py  test_tool_registry.py  tool_registry.py  validate_project.py
